--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Django>=1.5
 PIL==1.1.7
 beautifulsoup4==4.1.3
 django-cron==0.2.8
-django-twitter-bootstrap==2.3.1
-django-pipeline==1.3.8
+django-assets
+cssmin
